# theoi

./: .gitignore
hermes/src/: flashbutton.cpp  globals.cpp  globals.h  gopher.cpp  hermes.cpp  httpget.cpp  led.cpp  modem.cpp  otafirmware.cpp  ppp.cpp  sd.cpp  serial.cpp  settings.cpp  tcp.cpp  webserver.cpp  webserver.h  wifi.cpp
iris/: .gitignore  CMakeLists.txt
iris/src/: CMakeLists.txt  config.c  config.h  flash.c  flash.h  font.c  font.h  framebuf.c  framebuf.h  framebuf_dvi.c  framebuf_dvi.h  keyboard.c  keyboard.h  keyboard_ps2.c  keyboard_ps2.h  keyboard_usb.c  keyboard_usb.h  main.c  pins.h  serial.c  serial.h  serial_cdc.c  serial_cdc.h  serial_uart.c  serial_uart.h  sound.c  sound.h  terminal.c  terminal.h
protea/: esp8266.kicad_sch  hdmi.kicad_sch  power.kicad_sch  protea.kicad_pcb  protea.kicad_pro  protea.kicad_sch  ps2.kicad_sch  rp2040.kicad_sch  rs232.kicad_sch  sym-lib-table  usb2ttl.kicad_sch  usb_multiplexer.kicad_sch  usba.kicad_sch
protea/3D/: DS05-127-2-03BK-SMT-TR.stp  soic-14.stp
protea/LIBS/: D-SUB (9 pin, male, top mount).kicad_mod  DS05-127-2-03BK-SMT-TR.dcm  DS05-127-2-03BK-SMT-TR.kicad_sym  DS05-127-2-03BK-SMT-TR.lib  DS05-127-2-03BK-SMT-TR.mod  DS05127203BKSMTTR.kicad_mod  ESP-12S.dcm  ESP-12S.kicad_sym  ESP-12S.lib  ESP-12S.mod  ESP12S.kicad_mod  ESP8266 ESP-12E.kicad_mod  ESP8266-12E_ESP-12E.kicad_sym  ESP8266.kicad_sym  FRANK.kicad_sym  Pin Header (1x03).kicad_mod  Raspberry Pi Pico.kicad_mod  SOIC-8.kicad_mod  SOP-16.kicad_mod  SOT-23-6.kicad_mod  TACT-SIDE-4623.kicad_mod  UQFN-10.kicad_mod  XCVR_ESP8266-12E_ESP-12E.kicad_mod
(+7 files in other folders)
